--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <link rel="stylesheet" href="index.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    >
+    <script defer src='render.js'></script>
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    
+    <h1>⚡ Screen Recorder</h1>
+    
+    <video></video>
+
+    <br/>
+
+    <button id='startBtn' class='button is-primary'>Start</button>
+    <button id='stopBtn' class='button is-warning'>Stop</button>
+
+    <hr/>
+
+    <button id='videoSelectBtn' class='button is-text'>
+      Choose a video source
+    </button>
+
   </body>
 </html>
